// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`берет первый язык из config.LOCALES, если текущий язык не поддерживается геобазой 1`] = `
Array [
  Array [
    "getRegionByIp",
    "FAKE_IP",
  ],
  Array [
    "getCountryId",
    Array [
      1,
      "ru",
    ],
  ],
  Array [
    "getKnownLinguistics",
  ],
  Array [
    "getLinguistics",
    Array [
      2,
      "FAKE_LOCALE",
    ],
  ],
]
`;

exports[`возаращает пустую строку,  если не удалось определить страну по региону 1`] = `
Array [
  Array [
    "getRegionByIp",
    "FAKE_IP",
  ],
  Array [
    "getCountryId",
    Array [
      1,
      "ru",
    ],
  ],
]
`;

exports[`возращает результат 1`] = `
Object {
  "calls": Array [
    Array [
      "getRegionByIp",
      "FAKE_IP",
    ],
    Array [
      "getCountryId",
      Array [
        1,
        "ru",
      ],
    ],
    Array [
      "getKnownLinguistics",
    ],
    Array [
      "getLinguistics",
      Array [
        2,
        "ru",
      ],
    ],
  ],
  "instances": Array [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "invocationCallOrder": Array [
    4,
    5,
    6,
    7,
  ],
  "lastCall": Array [
    "getLinguistics",
    Array [
      2,
      "ru",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`делает запрос за фолбеком, если не удалось получить перевод для запрашиваемой локали 1`] = `
Array [
  Array [
    "getRegionByIp",
    "FAKE_IP",
  ],
  Array [
    "getCountryId",
    Array [
      1,
      "ru",
    ],
  ],
  Array [
    "getKnownLinguistics",
  ],
  Array [
    "getLinguistics",
    Array [
      2,
      "uz",
    ],
  ],
  Array [
    "getLinguistics",
    Array [
      2,
      "ru",
    ],
  ],
]
`;

exports[`ошибка геобазы 1`] = `Array []`;
